01-basic-k8s-http-app (MainTask)/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airtasker-task
  namespace: airtasker
spec:
  ingressClassName: nginx
  rules:
    - host: airtasker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airtasker-task
                port:
                  number: 80
